Add swagger and a lot of fixes
