# internal/entity/station.go
@@ -5,13 +5,16 @@ import (
 )
 
 type Station struct {
-	ID           int                `json:"id"`
-	SerialNumber string             `json:"serial_number"`
-	AddressId    int                `json:"address"`
-	Capacity     int                `json:"capacity"`
-	FreeCapacity int                `json:"free_capacity"`
-	Removed      int                `json:"removed"`
-	CreateAt     pgtype.Timestamptz `json:"create_at"`
-	UpdateAt     pgtype.Timestamptz `json:"update_at"`
-	DeleteAt     pgtype.Timestamptz `json:"delete_at"`
+	ID           int                 `json:"id"`
+	SerialNumber string              `json:"serial_number"`
+	Address      int                 `json:"address,omitempty"`
+	Capacity     float64             `json:"capacity,omitempty"`
+	FreeCapacity float64             `json:"free_capacity,omitempty"`
+	Removed      bool                `json:"removed,omitempty"`
+	CreateAt     *pgtype.Timestamptz `json:"create_at,omitempty" swaggertype:"string"`
+	UpdateAt     *pgtype.Timestamptz `json:"update_at,omitempty" swaggertype:"string"`
+	DeleteAt     *pgtype.Timestamptz `json:"delete_at,omitempty" swaggertype:"string"`
+
+	AddressFull Address     `json:"address_full,omitempty"`
+	Powerbanks  []Powerbank `json:"powerbanks,omitempty"`
 }
